Initial Next.js 14 serverless chat frontend setup
- Configure Next.js 14 with App Router and TypeScript
- Set up Tailwind CSS with custom utilities
- Add Zustand for state management
- Implement WebSocket manager with exponential backoff
- Create chat UI components (ChatWindow, MessageInput, Sidebar, ConnectionStatus)
- Add Vitest and React Testing Library for testing
- Configure ESLint and Prettier for code quality
- Set up GitHub Actions for CI/CD
- Add deployment workflow for S3 + CloudFront
- Include comprehensive README with setup instructions

--- a/package.json
+++ b/package.json
@@ -6,21 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "next build",
+    "preview": "npx serve@latest out -p 3000",
+    "typecheck": "tsc --noEmit",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix && prettier --write .",
+    "format": "prettier --write .",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "next": "14.2.33",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.33"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^8",
-    "eslint-config-next": "14.2.33"
+    "eslint-config-next": "14.2.33",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jsdom": "^27.0.1",
+    "postcss": "^8",
+    "prettier": "^3.6.2",
+    "serve": "^14.2.5",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
