--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,17 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
 
 # vercel
 .vercel
+
+# turbo
+.turbo
+
+# vitest
+.vitest
 
 # typescript
 *.tsbuildinfo
